force-app/main/default/objects/Case/fields/test_0615__c.field-meta.xml
<CustomField>
    <fullName>test_0615__c</fullName>
    <description>06/15デモ作成</description>
    <label>test-0615</label>
    <length>10</length>
    <type>Text</type>
</CustomField>