force-app/main/default/objects/Case/fields/test_0616__c.field-meta.xml
<CustomField>
    <fullName>test_0616__c</fullName>
    <description>06/16デモ作成</description>
    <label>test-0616</label>
    <length>10</length>
    <type>Text</type>
</CustomField>