force-app/main/default/objects/Case/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <description>this parameter is test for adding.</description>
    <label>test</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>